extends VBoxContainer



func _on_Button_pressed():
	get_tree().change_scene("res://Baju/Info/MelayuJambiInfo.tscn")


func _on_Button2_pressed():
	get_tree().change_scene("res://Baju/Info/MelayuRiauInfo.tscn")


func _on_Button3_pressed():
	get_tree().change_scene("res://Baju/Info/Nggembe.tscn")


func _on_Button4_pressed():
	get_tree().change_scene("res://Baju/Info/NttInfo.tscn")


func _on_Button5_pressed():
	get_tree().change_scene("res://Baju/Info/PaksianInfo.tscn")


func _on_Button6_pressed():
	get_tree().change_scene("res://Baju/Info/PapuaInfo.tscn")


func _on_Button7_pressed():
	get_tree().change_scene("res://Baju/Info/PerangInfo.tscn")


func _on_Button8_pressed():
	get_tree().change_scene("res://Baju/Info/PesaanInfo.tscn")


func _on_Button9_pressed():
	get_tree().change_scene("res://Baju/Info/TulangBawangInfo.tscn")


func _on_Button10_pressed():
	get_tree().change_scene("res://Baju/Info/UleBalangInfo.tscn")


func _on_Button11_pressed():
	get_tree().change_scene("res://Baju/Info/UlosInfo.tscn")
